--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		<div class="bio">
 			
-			<center><p>Welcome to my GitHub Page. Here you can view the Pictures and from my Final Year Project.</p><center>
+			<center><p>Welcome to my GitHub Page. Here you can view the Pictures and Code from my Final Year Project.</p><center>
 
 		</div>
 
